Fix content overlap issue by increasing margins and adding z-index

--- a/src/components/InvoiceGenerator.module.css
+++ b/src/components/InvoiceGenerator.module.css
@@ -289,7 +289,10 @@
 }
 
 .companySection {
-  margin-bottom: 30px;
+  margin-bottom: 50px;
+  padding-bottom: 20px;
+  position: relative;
+  z-index: 5;
 }
 
 .companyInfo {
@@ -372,6 +375,7 @@
   display: flex;
   justify-content: space-between;
   gap: 20px;
+  margin-bottom: 20px;
 }
 
 .billTo {
@@ -416,7 +420,7 @@
 }
 
 .productsSection {
-  margin-top: 30px;
+  margin-top: 50px;
 }
 
 .productControls {
